# school_437_things

./: README.md
437_shopping_fee/437宿舍集体采购清单及相关文件_2025年8~9月/: 437宿舍集体采购清单_2025年8~9月.xlsx
High-order Polynomial Approximation/HPA/: Untitled.swift  basiHPC.cpp
International/InternetionalChess/: README.md  ~$实验报告模板.doc  实验报告大一计算机类12班姚晨3125004395.doc  实验报告模板.doc
International/InternetionalChess/InternetionalChess/: CMakeLists.txt  README-Windows.md  build(buildOnWin).bat  build-all.sh  build-windows.sh  display.cpp  display.h  inputstep.txt  logic.cpp  logic.h  main.cpp  mingw-w64-toolchain.cmake  outfile.txt  search.cpp  search.h  test-windows.sh  构建流程.md
International/InternetionalChess/InternetionalChess/build-macos/: CMakeCache.txt  Makefile  cmake_install.cmake
International/InternetionalChess/InternetionalChess/build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
LockProgram/LockProgram/: main.c
LockProgram/LockProgram.xcodeproj/: project.pbxproj
keilProject/: C 数组.txt  C子函数.txt  单位循环函数.txt  按位的相关逻辑运算.txt  电阻命名规则.txt  高精度定时器（8051）延时原理及代码.txt
keilProject/2-1-点亮一个LED/: Project.uvgui.Administrator  main.c
keilProject/2-2-LED闪烁/: main.c  project.uvgui.Administrator
keilProject/2-3-流水灯/: main.c  project.uvgui.Administrator
keilProject/3-1-独立按键控制亮灭/: 2-5-独立按键控制亮灭.uvgui.Administrator  2-5-独立按键控制亮灭.uvopt  2-5-独立按键控制亮灭.uvproj  main.c  project.uvgui.Administrator
keilProject/3-2-led独立控制亮灭/: main.c  project.uvgui.Administrator
keilProject/3-3-LED显示二进制/: main.c  project.uvgui.Administrator
lockProgram/: jm.cpp  jm.h  main.cpp
(+136 files in other folders)
